<resources>
    <string name="app_name">贴吧</string>
    <string name="name">name</string>
    <string name="sendTime">sendTime</string>
    <string name="answerTimes">answerTimes</string>
    <string name="mainTitle">首页</string>
    <string name="mainName">贴吧</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="email">电子邮箱</string>
    <string name="password">密码</string>
    <string name="forgot_pass">忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="register">注册</string>
    <string name="passwordAgain">重新输入密码</string>
    <string name="detail_title">主题帖</string>
    <string name="write_feed">发表主题</string>
    <string name="sure">确定</string>
    <string name="remind_title">输入标题</string>
    <string name="remind_content">输入内容</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="sure_logout">确认退出？</string>
    <string name="user_center">用户中心</string>

</resources>
