<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/title_blue"
    tools:context="com.lei.bbs.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/white">

        <!-- title -->
        <RelativeLayout
            android:id="@+id/rlTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/title_blue">
            <ImageView
                android:id="@+id/imgLeft"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:clickable="true"
                android:src="@mipmap/left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/login"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlTitle"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >


                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_weight="1"
                    android:drawablePadding="40dp"
                    android:drawableLeft="@mipmap/email"
                    android:hint="@string/email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="40dp"
                    android:drawableLeft="@mipmap/password"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </LinearLayout>

            <TextView
                android:id="@+id/login_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="16sp"
                android:padding="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_selector"
                android:text="@string/login"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false">
                </CheckBox>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/remember_password"/>
            </LinearLayout>


        </LinearLayout>

        <!-- bottom -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="78dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/forgot_pass"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvLine"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvForgot"
                android:background="@color/gray_d"/>


            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/tvLine"
                android:text="@string/register_now"
                android:textSize="15sp">

            </TextView>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>
