<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:gravity="center"
    android:background="#00000000">
    <!--top-->
    <FrameLayout
        android:id="@+id/flTitle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#00000000">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text=""
            android:background="@drawable/tv_common_dialog_top"/>
        <!--img-->
     <!--    <LinearLayout
            android:id="@+id/llRouterImg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:background="#00000000"
            android:gravity="center">
        </LinearLayout> -->

       <!--  <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="#00000000"
            android:layout_marginTop="40dp">
        </RelativeLayout> -->

    </FrameLayout>
   <!--  
    <View
        android:id="@+id/viewLong0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/flTitle"
        android:background="@color/gray_e"/> -->

    <!--bulb name-->
    <LinearLayout
        android:id="@+id/llBulbName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flTitle"
        android:paddingBottom="30dp"
        android:background="@color/white"
        android:orientation="horizontal">
         <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/sure_logout"/>
       <!--  <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:background="@drawable/selector_border"/> -->
    </LinearLayout>

    <!--bulb type-->
   <!--  <LinearLayout
        android:id="@+id/llBulbType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llBulbName"
        android:paddingBottom="25dp"
        android:paddingTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/bulb_name"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:singleLine="true"
            android:background="@drawable/selector_et"/>
    </LinearLayout> -->

    <View
        android:id="@+id/viewLong"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llBulbName"
        android:background="@color/gray_e"/>

    <!--cancle confirm-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewLong"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/selector_btn_common_cancel"
            android:textAllCaps="false"
            android:text="@string/cancel"/>
        <!-- style="?android:attr/borderlessButtonStyle" -->
       <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="@color/gray_e"/>
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/selector_btn_common_confirm"
            android:textAllCaps="false"
            android:text="@string/ok"/>

    </LinearLayout>

</RelativeLayout>
