<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_blue"
    android:orientation="vertical"
    tools:context="com.lei.bbs.activity.RegisterActivity">


    <com.lei.bbs.util.MyToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.lei.bbs.util.MyToolBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">

        <!-- title -->
        <!--<RelativeLayout
            android:id="@+id/rlTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/title_blue">

            <ImageView
                android:id="@+id/imgLeft"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:clickable="true"
                android:src="@mipmap/left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/register"/>
        </RelativeLayout>-->

        <LinearLayout
            android:id="@+id/login_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlTitle"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >


                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/email"
                    android:inputType="textEmailAddress"
                    android:layout_weight="1"
                    android:drawablePadding="40dp"
                    android:hint="用户名"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="40dp"
                    android:drawableLeft="@mipmap/password"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edPasswordAgain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="40dp"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/password"
                    android:hint="@string/passwordAgain" />

            </LinearLayout>

            <TextView
                android:id="@+id/login_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text=""
                android:textSize="16sp"
                android:padding="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_selector"
                android:text="@string/register"
                android:textSize="20sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
